--- a/android/plugin-manifest.json
+++ b/android/plugin-manifest.json
@@ -3,11 +3,15 @@
     "require_startup_execution": false,
     "class_name": "com.applicaster.plugin.televisionacademyplayer.PlayerContract"
   },
-  "dependency_repository_url": [],
+  "dependency_repository_url": [
+    {
+      "url": "http://bitmovin.bintray.com/maven"
+    }
+  ],
   "platform": "android",
   "author_name": "D. Puzak",
   "author_email": "dmytro.puzak@corewillsoft.com",
-  "manifest_version": "0.0.1",
+  "manifest_version": "0.0.2",
   "name": "Television Academy Player",
   "description": "Android Plugin for Television Academy",
   "type": "player",
@@ -15,7 +19,7 @@
   "identifier": "TelevisionAcademyPlayerPlugin",
   "ui_builder_support": true,
   "dependency_name": "com.applicaster:television-academy-player-plugin",
-  "dependency_version": "0.0.1",
+  "dependency_version": "0.0.2",
   "whitelisted_account_ids": [
     "5dcaba3ee648eb000eaf5c0a"
   ],
