--- a/android/constants.gradle
+++ b/android/constants.gradle
@@ -12,13 +12,15 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 project.ext {
-    releaseVersion = '0.0.2'
+    releaseVersion = '0.0.3'
     releaseVersionCode = 1
     minSdkVersion = 17
     targetSdkVersion = 29
     compileSdkVersion = 29
     buildToolsVersion = '29.0.2'
     androidxVersion = '1.0.2'
+    androidSupportVersion = '28.0.0'
+
     modulePrefix = ':'
 
     releaseArtifact = 'television-academy-player-plugin'
