--- a/android/ta_player_plugin/src/main/AndroidManifest.xml
+++ b/android/ta_player_plugin/src/main/AndroidManifest.xml
@@ -1,7 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.applicaster.plugin.televisionacademyplayer" >
 
-    <meta-data
-        android:name="BITMOVIN_PLAYER_LICENSE_KEY"
-        android:value="2996e07d-b66b-4953-bed9-c24c6813c016" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <application>
+        <activity android:name=".TAPlayerActivity" />
+
+        <meta-data
+            android:name="BITMOVIN_PLAYER_LICENSE_KEY"
+            android:value="2996e07d-b66b-4953-bed9-c24c6813c016" />
+    </application>
 </manifest>
