--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,7 +7,7 @@ source 'git@github.com:applicaster/PluginsBuilderCocoaPods.git'
 source 'git@github.com:CocoaPods/Specs.git'
 
 target 'TelevisionAcademyIOSPlayerPlugin' do
-#  pod 'PlayerEvents'
+  pod 'PlayerEvents', git: 'https://github.com/applicaster/PlayerEvents-iOS.git'
   pod 'ZappPlugins'
 	pod 'BitmovinPlayer', git: 'https://github.com/bitmovin/bitmovin-player-ios-sdk-cocoapod.git', tag:'2.37.0'
 end
