--- a/android/plugin-manifest.json
+++ b/android/plugin-manifest.json
@@ -11,7 +11,7 @@
   "platform": "android",
   "author_name": "D. Puzak",
   "author_email": "dmytro.puzak@corewillsoft.com",
-  "manifest_version": "0.0.5",
+  "manifest_version": "0.0.6",
   "name": "Television Academy Player",
   "description": "Android Plugin for Television Academy",
   "type": "player",
@@ -19,7 +19,7 @@
   "identifier": "TelevisionAcademyPlayerPlugin",
   "ui_builder_support": true,
   "dependency_name": "com.applicaster:television-academy-player-plugin",
-  "dependency_version": "0.0.5",
+  "dependency_version": "0.0.6",
   "whitelisted_account_ids": [
     "5dcaba3ee648eb000eaf5c0a"
   ],
@@ -27,5 +27,11 @@
   "deprecated_since_zapp_sdk": "",
   "unsupported_since_zapp_sdk": "",
   "react_native": false,
-  "custom_configuration_fields": []
+  "custom_configuration_fields": [
+    {
+      "type": "text",
+      "key": "test_video_url",
+      "tooltip_text": "Test URL to check Bitmovin player functionality."
+    }
+  ]
 }
