--- a/ios/plugin-manifest.json
+++ b/ios/plugin-manifest.json
@@ -1,27 +1,27 @@
 {
   "api": {
     "require_startup_execution": false,
-    "class_name": "ZappGeneralPlugins.BitmovinPlayerPlugin",
+    "class_name": "TelevisionAcademyIOSPlayerPlugin.BitmovinPlayerPlugin",
         "modules": [
         "TelevisionAcademyIOSPlayerPlugin"
     ],
   },
   "dependency_repository_url": [
-    "https://github.com/applicaster-plugins/TelevisionAcademyPlayerPlugin.git",
+    "https://github.com/bitmovin/bitmovin-player-ios-sdk-cocoapod.git",
     "https://github.com/applicaster/PlayerEvents-iOS.git"
   ],
   "platform": "ios",
-    "author_name": "Anatolii Afanasiev",
+  "author_name": "Anatolii Afanasiev",
   "author_email": "anatolii.afanasiev@corewillsoft.com",
-  "manifest_version": "0.0.1",
+  "manifest_version": "0.1.0",
   "name": "Television Academy Player",
   "description": "iOS Plugin for Television Academy",
   "type": "player",
   "screen": false,
   "identifier": "TelevisionAcademyPlayerPlugin",
   "ui_builder_support": true,
-  "dependency_name": "com.applicaster:television-academy-player-plugin",
-  "dependency_version": "0.0.4",
+  "dependency_name": "TelevisionAcademyIOSPlayerPlugin",
+  "dependency_version": "0.1.0",
   "whitelisted_account_ids": [
     "5dcaba3ee648eb000eaf5c0a"
   ],
