--- a/ios/plugin-manifest.json
+++ b/ios/plugin-manifest.json
@@ -1,14 +1,14 @@
 {
   "api": {
     "require_startup_execution": false,
-    "class_name": "TelevisionAcademyIOSPlayerPlugin.BitmovinPlayerPlugin",
-        "modules": [
-        "TelevisionAcademyIOSPlayerPlugin"
-    ],
+    "class_name": "TelevisionAcademyIOSPlayerPlugin.BitmovinPlayerPlugin"
   },
   "dependency_repository_url": [
     "https://github.com/bitmovin/bitmovin-player-ios-sdk-cocoapod.git",
-    "https://github.com/applicaster/PlayerEvents-iOS.git"
+    "git@github.com:applicaster/PlayerEvents-iOS.git"
+  ],  
+  "whitelisted_account_ids": [
+    "5dcaba3ee648eb000eaf5c0a"
   ],
   "platform": "ios",
   "author_name": "Anatolii Afanasiev",
@@ -22,10 +22,7 @@
   "ui_builder_support": true,
   "dependency_name": "TelevisionAcademyIOSPlayerPlugin",
   "dependency_version": "0.1.0",
-  "whitelisted_account_ids": [
-    "5dcaba3ee648eb000eaf5c0a"
-  ],
-  "min_zapp_sdk": "6.3.1",
+  "min_zapp_sdk": "12.0.0",
   "deprecated_since_zapp_sdk": "",
   "unsupported_since_zapp_sdk": "",
   "react_native": false,
