--- a/android/ta_player_plugin/src/main/AndroidManifest.xml
+++ b/android/ta_player_plugin/src/main/AndroidManifest.xml
@@ -7,14 +7,13 @@
 
     <application>
         <activity
-            android:name=".TAPlayerActivity" />
+            android:name=".TAPlayerActivity"/>
 
         <activity
             android:name="com.bitmovin.player.cast.ExpandedControllerActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.CastVideosTheme">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
