--- a/android/ta_player_plugin/build.gradle
+++ b/android/ta_player_plugin/build.gradle
@@ -31,13 +31,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:support-compat:$androidSupportVersion"
     implementation 'com.bitmovin.player:playercore:2.37.0'
     implementation 'com.applicaster:PlayerEvents:0.0.+'
 
     implementation "com.google.android.gms:play-services-cast-framework:$playServicesCastVersion" //only needed if Chromecast is used
-    implementation "com.android.support:mediarouter-v7:$androidSupportVersion"  //only needed if Chromecast is used
-    implementation "com.android.support:support-v4:$androidSupportVersion"  //only needed if Chromecast is used
+//    implementation "com.android.support:mediarouter-v7:$androidSupportVersion"  //only needed if Chromecast is used
+//    implementation "com.android.support:support-v4:$androidSupportVersion"  //only needed if Chromecast is used
+//    implementation "com.android.support:support-compat:$androidSupportVersion"
 
     testImplementation 'junit:junit:4.12'
 
