fix: player destroy

--- a/ios/plugin-manifest.json
+++ b/ios/plugin-manifest.json
@@ -11,9 +11,9 @@
             "5dcaba3ee648eb000eaf5c0a"
       ],
       "platform": "ios",
-      "author_name": "Anatolii Afanasiev",
-      "author_email": "anatolii.afanasiev@corewillsoft.com",
-      "manifest_version": "0.2.8",
+      "author_name": "Vlad Sumtsov",
+      "author_email": "vlad.sumtsov@corewillsoft.com",
+      "manifest_version": "0.2.9",
       "name": "Television Academy Player",
       "description": "iOS Plugin for Television Academy",
       "type": "player",
@@ -21,7 +21,7 @@
       "identifier": "TelevisionAcademyPlayerPlugin",
       "ui_builder_support": true,
       "dependency_name": "TelevisionAcademyIOSPlayerPlugin",
-      "dependency_version": "0.2.8",
+      "dependency_version": "0.2.9",
       "min_zapp_sdk": "12.0.0",
       "deprecated_since_zapp_sdk": "",
       "unsupported_since_zapp_sdk": "",
