--- a/android/ta_player_plugin/build.gradle
+++ b/android/ta_player_plugin/build.gradle
@@ -35,9 +35,12 @@ dependencies {
     implementation 'com.bitmovin.player:playercore:2.37.0'
     implementation 'com.applicaster:PlayerEvents:0.0.+'
 
-    implementation "com.google.android.gms:play-services-cast-framework:$playServicesCastVersion" //only needed if Chromecast is used
-    implementation "com.android.support:mediarouter-v7:$androidSupportVersion"  //only needed if Chromecast is used
-    implementation "com.android.support:support-v4:$androidSupportVersion"  //only needed if Chromecast is used
+    implementation "com.google.android.gms:play-services-cast-framework:$playServicesCastVersion"
+    //only needed if Chromecast is used
+    implementation "com.android.support:mediarouter-v7:$androidSupportVersion"
+    //only needed if Chromecast is used
+    implementation "com.android.support:support-v4:$androidSupportVersion"
+    //only needed if Chromecast is used
 
     testImplementation 'junit:junit:4.12'
 
@@ -63,6 +66,11 @@ dependencies {
             exclude group: 'com.google.android.exoplayer', module: 'exoplayer-ui'
             exclude group: 'com.google.android.exoplayer', module: 'exoplayer-smoothstreaming'
         }
+    }
+//    implementation project(':cast_plugin')
+    implementation("com.applicaster:GenericChromecast-Android-no-meta:1.0.+") {
+        exclude group: 'com.applicaster', module: 'applicaster-android-sdk'
+        exclude group: 'com.applicaster', module: 'zapp-root-android'
     }
 }
 
