Added required LiquidPlayer dependency.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,6 +30,7 @@ allprojects {
         maven {
             url  'http://bitmovin.bintray.com/maven'
         }
+        maven { url 'https://jitpack.io' }
     }
 }
 
