--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply from: './constants.gradle'
 
 buildscript {
     ext.kotlin_version = '1.3.50'
@@ -34,6 +38,5 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+apply from: './build_plugin.gradle'
+apply from: './publish.gradle'
