fix: ellapsed time chromecast

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,7 @@ source 'git@github.com:bitmovin/bitmovin-player-ios-sdk-cocoapod.git'
 
 target 'TelevisionAcademyIOSPlayerPlugin' do
   pod 'ZappPlugins'
+  pod 'google-cast-sdk-no-bluetooth', '= 4.4.4'
   pod 'PlayerEvents', git: 'https://github.com/applicaster/PlayerEvents-iOS.git'
   pod 'BitmovinPlayer', git: 'https://github.com/bitmovin/bitmovin-player-ios-sdk-cocoapod.git', tag:'2.42.0'
 end
