--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -23,8 +23,12 @@
         </activity>
 
         <meta-data
+            android:name="BITMOVIN_ANALYTICS_LICENSE_KEY"
+            android:value="@string/bitmovin_analytics_license_key" />
+
+        <meta-data
             android:name="BITMOVIN_PLAYER_LICENSE_KEY"
-            android:value="9909b054-c194-416e-b2bc-13f9a781431e" />
+            android:value="@string/bitmovin_player_license_key" />
 
         <meta-data
             android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
