--- a/android/build_plugin.gradle
+++ b/android/build_plugin.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:support-compat:$androidSupportVersion"
     implementation 'com.bitmovin.player:playercore:2.37.0'
+    implementation 'com.bitmovin.analytics:collector-bitmovin-player:1.12.1'
     implementation 'com.applicaster:PlayerEvents:0.0.+'
     implementation 'com.github.LiquidPlayer:LiquidCore:0.5.1'
 
