--- a/tvos/package.json
+++ b/tvos/package.json
@@ -5,7 +5,7 @@
     "plugin",
     "development-app"
   ],
-  "version": "0.4.28",
+  "version": "0.4.29",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
@@ -18,13 +18,13 @@
   "author": "vlad.sumtsov@corewillsoft.com",
   "license": "MIT",
   "devDependencies": {
-    "@applicaster/zapplicaster-cli": "2.3.1-rc.0",
+    "@applicaster/zapplicaster-cli": "3.0.0",
     "react": "16.8.3",
     "react-native": "0.59.10",
     "react-dom": "16.13.0"
   },
   "peerDependencies": {
-    "@applicaster/zapplicaster-cli": "2.3.1-rc.0",
+    "@applicaster/zapplicaster-cli": "3.0.0",
     "react": "16.8.3",
     "react-native": "0.59.10",
     "react-dom": "16.13.0"
