--- a/android/plugin-manifest.json
+++ b/android/plugin-manifest.json
@@ -10,9 +10,9 @@
     }
   ],
   "platform": "android",
-  "author_name": "Vlad Sumtsov",
-  "author_email": "vlad.sumtsov@corewillsoft.com",
-  "manifest_version": "0.1.11",
+  "author_name": "Barak Halevi",
+  "author_email": "barak@msapps.mobi",
+  "manifest_version": "0.1.13",
   "name": "Television Academy Player",
   "description": "Android Plugin for Television Academy",
   "type": "player",
@@ -20,7 +20,7 @@
   "identifier": "TelevisionAcademyPlayerPlugin",
   "ui_builder_support": true,
   "dependency_name": "com.applicaster:television-academy-player-plugin",
-  "dependency_version": "0.1.11",
+  "dependency_version": "0.1.13",
   "whitelisted_account_ids": [
     "5dcaba3ee648eb000eaf5c0a"
   ],
@@ -58,6 +58,13 @@
       "label": "dsp base url",
       "placeholder": "https://zapp-pipes....../",
       "tooltip_text": "dsp base url"
+    },
+    {
+      "type": "text",
+      "key": "dsp_parameters_url",
+      "label": "dsp parameters",
+      "placeholder": "&type=submissions&screen=videos&env=prod&isTVApp=false",
+      "tooltip_text": "dsp parameters"
     }
   ],
   "targets": ["mobile"],
