--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,44 +4,6 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply from: './constants.gradle'
 
-android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
-
-    defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-        consumerProguardFiles 'consumer-rules.pro'
-    }
-
-    buildTypes {
-        debug {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    lintOptions {
-        abortOnError false
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-
-    }
-
-}
-
-
 buildscript {
     ext.kotlin_version = '1.2.51'
     repositories {
@@ -50,7 +12,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.novoda:bintray-release:0.9.2'
         // NOTE: Do not place your application dependencies here; they belong
@@ -75,12 +37,6 @@ allprojects {
         maven { url 'https://jitpack.io' }
     }
 }
-dependencies {
 
-    implementation 'com.applicaster:applicaster-android-sdk:4.2.7'
-    implementation 'com.bitmovin.player:playercore:2.37.0'
-    implementation 'com.bitmovin.analytics:collector-bitmovin-player:1.12.1'
-    implementation 'com.applicaster:PlayerEvents:0.0.+'
-}
-//apply from: './build_plugin.gradle'
-//apply from: './publish.gradle'
+apply from: './build_plugin.gradle'
+apply from: './publish.gradle'
