--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -12,6 +11,7 @@ buildscript {
 
     }
     dependencies {
+
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.novoda:bintray-release:0.9.2'
@@ -36,6 +36,13 @@ allprojects {
         }
         maven { url 'https://jitpack.io' }
     }
+}
+
+dependencies {
+    implementation 'com.applicaster:applicaster-android-sdk:4.2.7'
+    implementation 'com.bitmovin.player:playercore:2.37.0'
+    implementation 'com.bitmovin.analytics:collector-bitmovin-player:1.12.1'
+    implementation 'com.applicaster:PlayerEvents:0.0.+'
 }
 
 apply from: './build_plugin.gradle'
