--- a/android/plugin-manifest.json
+++ b/android/plugin-manifest.json
@@ -12,7 +12,7 @@
   "platform": "android",
   "author_name": "Barak Halevi",
   "author_email": "barak@msapps.mobi",
-  "manifest_version": "2.0.0",
+  "manifest_version": "0.2.0",
   "name": "Television Academy Player",
   "description": "Android Plugin for Television Academy",
   "type": "player",
@@ -20,7 +20,7 @@
   "identifier": "TelevisionAcademyPlayerPlugin",
   "ui_builder_support": true,
   "dependency_name": "com.applicaster:television-academy-player-plugin",
-  "dependency_version": "2.0.0",
+  "dependency_version": "0.2.+",
   "whitelisted_account_ids": [
     "5dcaba3ee648eb000eaf5c0a"
   ],
@@ -30,11 +30,6 @@
   "unsupported_since_zapp_sdk": "",
   "react_native": false,
   "custom_configuration_fields": [
-    {
-      "type": "text",
-      "key": "test_video_url",
-      "tooltip_text": "Test URL to check Bitmovin player functionality."
-    },
     {
       "type": "text",
       "key": "chromecast_app_id",
