--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,24 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply from: './constants.gradle'
+
+project.ext {
+    releaseVersion = '0.5.1'
+    releaseVersionCode = 1
+    minSdkVersion = 17
+    targetSdkVersion = 29
+    compileSdkVersion = 29
+    buildToolsVersion = '29.0.2'
+    androidxVersion = '1.0.2'
+    androidSupportVersion = '27.1.1'
+    playServicesCastVersion = '15.0.1'
+
+    modulePrefix = ':'
+
+    releaseArtifact = 'television-academy-player-plugin'
+    releaseDescription = 'The Television Academy player plugin.'
+}
+
 
 buildscript {
     ext.kotlin_version = '1.3.10'
@@ -38,12 +55,89 @@ allprojects {
     }
 }
 
+
+
+android {
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
+    
+    defaultConfig {
+        versionName project.ext.releaseVersion
+        versionCode project.ext.releaseVersionCode
+        minSdkVersion 19
+        targetSdkVersion 28
+
+        consumerProguardFiles 'consumer-rules.pro'
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+}
+
 dependencies {
     implementation 'com.applicaster:applicaster-android-sdk:4.2.7'
     implementation 'com.bitmovin.player:playercore:2.37.0'
     implementation 'com.bitmovin.analytics:collector-bitmovin-player:1.12.1'
     implementation 'com.applicaster:PlayerEvents:0.0.+'
-}
 
-apply from: './build_plugin.gradle'
-apply from: './publish.gradle'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.android.support:support-compat:$androidSupportVersion"
+    implementation 'com.bitmovin.player:playercore:2.37.0'
+    implementation 'com.bitmovin.analytics:collector-bitmovin-player:1.12.1'
+    implementation 'com.applicaster:PlayerEvents:0.0.+'
+    implementation 'com.github.LiquidPlayer:LiquidCore:0.5.1'
+
+    implementation "com.google.android.gms:play-services-cast-framework:$playServicesCastVersion"
+    //only needed if Chromecast is used
+    implementation "com.android.support:mediarouter-v7:$androidSupportVersion"
+    //only needed if Chromecast is used
+    implementation "com.android.support:support-v4:$androidSupportVersion"
+    //only needed if Chromecast is used
+
+    testImplementation 'junit:junit:4.12'
+
+//    // Applicaster SDK
+//    def applicasterSDKPath = 'com.applicaster:applicaster-android-sdk:2.32.15'
+//
+//    // Check if an open SDK is defined - if not use the closed one.
+//    //Check if an open SDK is defined - if not use the closed one.
+//    def devSDK = findProject(':applicaster-android-sdk')
+//    if (devSDK != null) {
+//        api project(':applicaster-android-sdk') {
+//            exclude group:    'com.applicaster', module: 'applicaster-android-sdk'
+//            exclude group:    'com.applicaster', module: 'zapp-root-android'
+//        }
+//    } else {
+//        api(applicasterSDKPath) {
+//            exclude group:    'com.applicaster', module: 'applicaster-android-sdk'
+//            exclude group:    'com.applicaster', module: 'zapp-root-android'
+//        }
+//    }
+}
+apply plugin: 'bintray-release'
+
+publish {
+
+    bintrayUser = System.getenv("MAVEN_USERNAME")
+    bintrayKey = System.getenv("MAVEN_PASSWORD")
+
+    dryRun = false
+    override = true
+
+    artifactId = releaseArtifact
+    desc = releaseDescription
+    publishVersion = releaseVersion
+    repoName = 'maven'
+    userOrg = 'applicaster-ltd'
+    groupId = 'com.applicaster'
+    website = 'https://github.com/applicaster-plugins/TelevisionAcademyPlayerPlugin.git'
+}
