--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 project.ext {
-    releaseVersion = '0.5.1'
+    releaseVersion = '0.5.2'
     releaseVersionCode = 1
     minSdkVersion = 17
     targetSdkVersion = 29
@@ -21,7 +21,10 @@ project.ext {
 
 
 buildscript {
+    //use for upload artifact
     ext.kotlin_version = '1.3.10'
+    //dev use
+//    ext.kotlin_version = '1.2.51'
     repositories {
         google()
         jcenter()
