--- a/android/plugin-manifest.json
+++ b/android/plugin-manifest.json
@@ -10,9 +10,9 @@
     }
   ],
   "platform": "android",
-  "author_name": "Barak Halevi",
-  "author_email": "barak@msapps.mobi",
-  "manifest_version": "0.5.0",
+  "author_name": "Shay markovich",
+  "author_email": "shay@applicaster.com",
+  "manifest_version": "0.6.0",
   "name": "Television Academy Player",
   "description": "Android Plugin for Television Academy",
   "type": "player",
@@ -20,7 +20,7 @@
   "identifier": "TelevisionAcademyPlayerPlugin",
   "ui_builder_support": true,
   "dependency_name": "com.applicaster:television-academy-player-plugin",
-  "dependency_version": "0.5.+",
+  "dependency_version": "0.6.+",
   "whitelisted_account_ids": [
     "5dcaba3ee648eb000eaf5c0a"
   ],
