--- a/android/plugin-manifest.json
+++ b/android/plugin-manifest.json
@@ -11,8 +11,8 @@
   ],
   "platform": "android",
   "author_name": "Shay markovich",
-  "author_email": "shay@applicaster.com",
-  "manifest_version": "0.6.0",
+  "author_email": "s.markovich@applicaster.com",
+  "manifest_version": "0.7.0",
   "name": "Television Academy Player",
   "description": "Android Plugin for Television Academy",
   "type": "player",
@@ -20,7 +20,7 @@
   "identifier": "TelevisionAcademyPlayerPlugin",
   "ui_builder_support": true,
   "dependency_name": "com.applicaster:television-academy-player-plugin",
-  "dependency_version": "0.6.+",
+  "dependency_version": "0.7.+",
   "whitelisted_account_ids": [
     "5dcaba3ee648eb000eaf5c0a"
   ],
@@ -34,6 +34,13 @@
       "type": "text",
       "key": "chromecast_app_id",
       "tooltip_text": "Chromecast application ID"
+    },
+    {
+      "type": "text",
+      "key": "ChromecastCSS",
+      "label": "chromecast css style url",
+      "placeholder": "https://....../",
+      "tooltip_text": "chromecast css style url"
     },
     {
       "type": "text",
