Add functionality to send the user id for Bitmovin analytics. https://applicaster.atlassian.net/browse/IM-496

--- a/ios/plugin-manifest.json
+++ b/ios/plugin-manifest.json
@@ -11,9 +11,9 @@
             "5dcaba3ee648eb000eaf5c0a"
       ],
       "platform": "ios",
-      "author_name": "Vlad Sumtsov",
-      "author_email": "vlad.sumtsov@corewillsoft.com",
-      "manifest_version": "0.6.6",
+      "author_name": "Pablo Rueda",
+      "author_email": "p.rueda@applicaster.com",
+      "manifest_version": "0.7.0",
       "name": "Television Academy Player",
       "description": "iOS Plugin for Television Academy",
       "type": "player",
@@ -21,7 +21,7 @@
       "identifier": "TelevisionAcademyPlayerPlugin",
       "ui_builder_support": true,
       "dependency_name": "TelevisionAcademyIOSPlayerPlugin",
-      "dependency_version": "0.6.6",
+      "dependency_version": "0.7.0",
       "min_zapp_sdk": "12.0.0",
       "deprecated_since_zapp_sdk": "",
       "unsupported_since_zapp_sdk": "",
